Fix overlap with brand logo and content body

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -149,7 +149,7 @@ h1 {
 
 #footer-content {
     background: url('/media/images/navbar-back-test.png');
-    height: 512px;
+    min-height: 512px;
     color: whitesmoke;
     display: grid;
     grid-template-columns: 1fr;
